# MLClass

./: .gitignore  README.md  pyproject.toml  requirements.txt  rice_leaf_problem_basics.ipynb
assignments/: README.md
assignments/assignment1/: README.md
datasets/: as7265x_leaves.csv  as7265x_rice.csv  corn.csv  index.yaml
datasets/fruit/: fruit_data.csv
datasets/leaves/: as7262_leaves.csv  as7262_mango.csv  as7263_leaves.csv  as7265x_rice.csv
electronics/: README.md
electronics/schematics/: bandpass_filter.py  bode_plot_graph.py  difference_amplifier.py  equivalent_resistance.py  high_pass_filter.py  led_measure_turnon_volt.py  low_pass_filter.py  simple_ammeter.py
electronics/schematics/basic/: DMM_practice.py  diode_intro.py  superposition.py
electronics/schematics/bjt/: bjt_basic.py  bjt_calc_re.py  bjt_common_emitter.py  current_mirror.py  current_mirror_source_test.py  op-amp-diff-stage.py  photodiodes.py
playground_test_ideas/: neuron.py
semesters/semester_spring_24/: README.md
semesters/semester_spring_24/midterm/: README.md
simple_neuron/: simple_neuron.py
templates/: file_loader.py  templates.pkl
tests/unittests/: test_get_data.py
utility_functions/: create_documents.py  get_data.py  get_fish_data.py
utility_functions/dataset_generators/: chlorophyll_spectal.py  lumber.py
utility_functions/templates/: file_loader.py  templates.pkl
worksheets/intro_ml/: Regression_intro_worksheet_repo.ipynb
